[gd_scene load_steps=7 format=3 uid="uid://chk4jjgjwxmhq"]

[ext_resource type="Script" uid="uid://dtpnu1t1v5nmt" path="res://ui/item_panel.gd" id="1_2nlfp"]
[ext_resource type="Texture2D" uid="uid://c4gilvnqdlrg8" path="res://ui/panels/Item Panel.png" id="1_jlm3y"]
[ext_resource type="FontFile" uid="uid://ddsbots1qimd3" path="res://shared/PixelFont.ttf" id="2_lq18c"]
[ext_resource type="Texture2D" uid="uid://cdnulwym1wrfj" path="res://ui/icons/button.png" id="4_gjt6l"]
[ext_resource type="Texture2D" uid="uid://do13co2n43dx1" path="res://ui/icons/button_touched.png" id="5_587pv"]
[ext_resource type="Texture2D" uid="uid://b24f7dvhjyddp" path="res://ui/icons/button_touching.png" id="5_hyfk6"]

[node name="item_panel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2nlfp")

[node name="ItemTag" type="Sprite2D" parent="."]
position = Vector2(1, 23.999998)
scale = Vector2(2.7, 2.7)
texture = ExtResource("1_jlm3y")
centered = false

[node name="UpperSection" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InfoPanel" type="NinePatchRect" parent="UpperSection"]
layout_mode = 0
offset_left = 282.0
offset_top = 170.0
offset_right = 1126.0
offset_bottom = 291.0

[node name="NameLabel" type="Label" parent="UpperSection/InfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 6.0
offset_right = 342.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_lq18c")
theme_override_font_sizes/font_size = 50
text = "物品名称"

[node name="DescLabel" type="Label" parent="UpperSection/InfoPanel"]
layout_mode = 0
offset_left = 15.0
offset_top = 111.0
offset_right = 631.0
offset_bottom = 141.0
theme_override_colors/font_color = Color(0.34117648, 0.3764706, 0.5137255, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("2_lq18c")
theme_override_font_sizes/font_size = 22
text = "据说研究它能掌握时间的本质，目前你只掌握了怎么让自己头晕"

[node name="EffectLabel" type="RichTextLabel" parent="UpperSection/InfoPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 74.0
offset_right = 595.0
offset_bottom = 104.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_lq18c")
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
bbcode_enabled = true
text = "【效果：物理知识+1，耗时10分钟】"
vertical_alignment = 1

[node name="InteractPanel" type="NinePatchRect" parent="UpperSection"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Icon" type="TextureRect" parent="UpperSection/InteractPanel"]
layout_mode = 0
offset_left = 122.0
offset_top = 168.0
offset_right = 243.0
offset_bottom = 288.0

[node name="UseButton" type="TextureButton" parent="UpperSection/InteractPanel"]
layout_mode = 0
offset_left = 119.0
offset_top = 303.0
offset_right = 191.0
offset_bottom = 338.0
texture_normal = ExtResource("4_gjt6l")
texture_pressed = ExtResource("5_hyfk6")
texture_hover = ExtResource("5_587pv")

[node name="Label" type="Label" parent="UpperSection/InteractPanel/UseButton"]
layout_mode = 0
offset_top = 3.0
offset_right = 66.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0.31969476, 0.39963734, 0.45817375, 1)
theme_override_fonts/font = ExtResource("2_lq18c")
theme_override_font_sizes/font_size = 25
text = "使用"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LowerSection" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ScrollContainer" type="ScrollContainer" parent="LowerSection"]
layout_mode = 0
offset_left = 120.0
offset_top = 348.0
offset_right = 1140.0
offset_bottom = 634.0

[node name="ItemGrid" type="GridContainer" parent="LowerSection/ScrollContainer"]
layout_mode = 2
columns = 7
